test/tests/stages/14_pointers/invalid_types/assign_wrong_pointer_type.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[26]:
  int
  identifier(main)
  (
  void
  )
  {
  double
  *
  identifier(d)
  =
  const int(0)
  ;
  long
  *
  identifier(l)
  =
  const int(0)
  ;
  identifier(l)
  =
  identifier(d)
  ;
  return
  const int(0)
  ;
  }
